# msp430-quickstart

./: .gitignore  Cargo.toml  README.md  Xargo.toml  cargo-generate.toml  memory.x  msp430-none-elf.json  mspdebug.cfg  mspdebug.gdb  rust-toolchain.toml
.cargo/: config
examples/: blinky.rs  empty.rs  override-default-handler.rs  rtfm.rs  timer-oncecell.rs  timer-rtfm.rs  timer-unsafe.rs  timer.rs
examples/temp-hal/: hal.rs  main.rs  newtypes.rs
src/: main.rs
