[package]
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
msp430 = "0.3.0"
msp430-rt = "0.3.0"
panic-msp430 = "0.3.0"

# Use an existing PAC to ensure examples and the crate itself compiles. If
# targeting a different device, you may need to change the version of your
# crate. Your PAC must be generated with svd2rust version v0.20.0 or later.
[dependencies.{{device}}]
version = "0.3.0"
features = ["rt"]

# Uncomment for the "timer-oncecell example". The interior mutability type
# OnceCell provides a better size footprint compared to RefCell.
# [dev-dependencies.once_cell]
# version = "1.7.2"
# default_features = false

# Required for `cargo fix` to work!
[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
opt-level = "s" # Size is more important than performance on MSP430.
codegen-units = 1 # Better size optimization.
lto = "fat" # _Much_ better size optimization.
# debug = true # Debug _can_ slightly increase size of .text segment.
