[package]
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
msp430 = "0.3.0"
msp430-rt = "0.3.0"
panic-msp430 = "0.3.0"

# Use an existing PAC to ensure examples and the crate itself compiles. If
# targeting a different device, you may need to change the version of your
# crate. Your PAC must be generated with svd2rust version v0.20.0 or later.
[dependencies.{{device}}]
version = "0.3.0"
features = ["rt"]

{% if examples == "yes" %}
[dev-dependencies]
embedded-hal = "1.0.0-alpha.6"
nb = "1.0.0"
fixed = "1.6.0"
fixed-macro = "1.1.1"

[dev-dependencies.once_cell]
version = "1.7.2"
default_features = false

[dev-dependencies.tcn75a]
version = "0.2.0"
git = "https://github.com/cr1901/i2c-server"
branch = "embedded-hal-1.0"

[patch.crates-io.fixed-macro]
git = "https://github.com/kvinwang/fixed-macro"
version = "1.1.1"
{% endif %}

# Required for `cargo fix` to work!
[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
opt-level = "s" # Size is more important than performance on MSP430.
codegen-units = 1 # Better size optimization.
lto = "fat" # _Much_ better size optimization.
# debug = true # Debug _can_ slightly increase size of .text segment.
